added  index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <img src="Siham%20Tabik_files/me.html" style="float: right">
 
 <h1>Siham Tabik</h1>
-Assistant Professor <br><br>
 
 Current affiliation:
 <font size="1">
@@ -20,17 +19,10 @@ Phone : (+34) 876555545
 <br><br>
 </ul>
 </font>
-Former affiliation:
-<font size="1">
-<ul>
-<a href="http://www.ac.uma.es/">Department of Computer Architecture</a><br> 
-University of Málaga<br>
-E-29080 Málaga<br>
 
 
-Email: stabik AT uma.es<br>
-Office: 2.2.25<br>
-Phone: (+34) 952 13 41 69<br>
+Email: siham AT ugr.es<br>
+Office: DB2<br>
 </ul>
 </font>
 <br>
