added  index.html

--- a/index.html
+++ b/index.html
@@ -8,21 +8,12 @@
 
 <h1>Siham Tabik</h1>
 
-Current affiliation:
-<font size="1">
-<ul>
-<a href="http://www.ac.uma.es/">Dpt. Informatics and Systems Engineering</a><br> 
-Ed. Ada Byron<br>C\ Maria de Luna 1<br>E-50018 Zaragoza<br> Spain<br>
-Email: stabik AT unizar.es<br>
-Office: D.0.0.1<br>
-Phone : (+34) 876555545	
-<br><br>
-</ul>
-</font>
-
-
+School of Informatics<br>
+University of Granada<br>
 Email: siham AT ugr.es<br>
 Office: DB2<br>
+
+
 </ul>
 </font>
 <br>
