added  index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 School of Informatics<br>
 University of Granada<br>
 Email: siham AT ugr.es<br>
-Office: DB2<br>
 
 
 </ul>
@@ -29,106 +28,8 @@ Office: DB2<br>
 
 
 
-<h2>Selected Publications</h2>    
+<h2>TensorFlow tutorial</h2>    
 <ul>
-
-<li> S Tabik, M Peemen, N Guil, H Corporaal. <br> <font color="blue"> Demystifying the 16x16 thread-block for stencils on the GPU</font>  <br> <em>
-Concurrency and Computation: Practice and Experience </em>, 27 (18), 5557-5573, 2015. <a href="http://www.ac.uma.es/%7Esiham/CPE.pdf">[pdf]</a><br><br>
-
-</li><li> A. R. Cervilla, S. Tabik, L. F. Romero. <br> <font color="blue"> Sitting Multiple Observers for Maximum Coverage: An Accurate Approach </font>  <br> <em>
-Procedia Computer Science, Volume 51, 2015, Pages 356-365. <a href="http://www.ac.uma.es/%7Esiham/ICCS.pdf">[pdf]</a></em><br><br>
-
-
-
-</li><li> S. Tabik, A.R. Cervilla, E, Zapata, L.F. Romero. <br> <font color="blue"> Efficient Data Structure and Highly Scalable Algorithm for Total-Viewshed Computation </font> <br> <em>IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing</em>, 8(1):304-310, 2015. <a href="http://www.ac.uma.es/%7Esiham/STARS.pdf">[pdf] </a><br><br>
-
-</li><li> S Tabik, G. Ortega, E.M. Garzon  <br><font color="blue"> Performance Evaluation of Kernel Fusion BLAS Routines on the GPU: Iterative Solvers as Case Study</font>,<br><em> 
-The Journal of Supercomputing, 2014. <a href="http://www.ac.uma.es/%7Esiham/FusionTrans.pdf">[pdf]</a></em><a href="http://www.ac.uma.es/%7Esiham/FusionTrans.pdf">. </a><br><br>
-
-
-</li><li> S. Tabik, L.F. Romero, E. L. Zapata. <br>
-        <font color="blue"> Simultaneous Computation of Total Viewshed on Large High Resolution Grids</font>,<br><em> International Journal of Geographical Information
-        Science</em>, 27(4): 804-814, 2013. <a href="http://www.ac.uma.es/%7Esiham/visibility-2012.pdf">[pdf]</a><br><br>
-
-
-         </li><li> S Tabik, A Villegas, EL Zapata, LF Romero  <br><font color="blue"> Optimal tilt and orientation maps: a multi-algorithm approach for heterogeneous multicore-GPU systems</font>,<br><em> 
-        The Journal of Supercomputing, 1-13, 2013. <a href="http://www.ac.uma.es/%7Esiham/max-map.pdf">[pdf]</a></em><br><br> 
-
-
-        </li><li> S. Tabik, L.F. Romero, P. Mimica, O. G. Plata, E. L. Zapata <br><font color="blue">VLBI-resolution radio-map algorithms:
-Performance analysis of different levels of data-sharing on multi-socket,
-multi-core architectures</font>,<br><em> Computer Physics Communications
-183(9): 1937-1946, 2012.</em> <a href="http://www.ac.uma.es/%7Esiham/cpc-2012.pdf">[pdf]</a><br><br>
-
-       
-        </li><li> G. Utrera, S. Tabik, J. Corbalan, J. Labarta. <br>
-        <font color="blue"> A Job Scheduling Approach for Multi-core Clusters Based on Virtual Malleability</font>,<br><em>
-       Euro-Par</em>, pp. 191-203, August 27-31, 2012. <a href="http://www.ac.uma.es/%7Esiham/FCFS-VM.pdf">[pdf]</a><br><br>
-
-
-
-</li><li> S. Tabik, L.F. Romero, E. L. Zapata. 
-
-<br><font color="blue"> High Performance Three-horizon Composition Algorithm for Large Scale Terrains</font>, <br>
-<em> International Journal of Geographical Information Science </em>, Vol. 25, Issue 4, pp. 541-555, 2011. <a href="http://www.ac.uma.es/%7Esiham/horizon.pdf">[pdf]</a><br><br>
-
-<!----        <LI> S. Tabik, L.F. Romero, G. Utrera and O. Plata. <BR>
-<FONT  COLOR="blue"> Mapping Parallel Loops on Multicore Systems </FONT></A> <BR><EM> 15th Workshop on Compilers for Parallel Computing (CPC'10)</EM>, Vienna (Austria), June 2010.<a href=""></A> <BR><BR>
----->	
-
-        </li><li> A. Navarro, R. Asenjo, S. Tabik, C. Cascaval. <br> 
-	<font color="blue"> Analytical Modeling of Pipeline Parallelism. </font> .<br> <em>
-International Conference on Parallel Architectures and Compilation Techniques (PACT'09), pp. 281-290, September 12-16, 2009. <a href="http://www.ac.uma.es/%7Esiham/pact09_workstealing.pdf">[pdf]</a><br><br>
-
-	
-
-        </em></li><li><em> S. Tabik, L.F. Romero, J. Vias, Emilio L. Zapata.<br>
-        <font color="blue"> Fast Clear-sky Solar Irradiation Computation for Very Large Digital Elevation Models</font>.<br>
-        <em> Computer Physics Communications </em>, Vol. 178, Issue 11, pp. 800-808, 2008. <a href="http://www.ac.uma.es/%7Esiham/Irradiation.pdf">[pdf]</a><br><br>
-
-
-
-        </em></li><li><em> S. Tabik, L.F. Romero, E.M. Garzon, J.I. Ramos.<br>
-        <font color="blue">  On a Model of Three-dimensional Bursting and its Parallel Implementations</font>.<br>
-        <em> Computer Physics Communications </em>, Vol. 178, Issue 7, pp. 471-485, 2008. <a href="http://www.ac.uma.es/%7Esiham/bursting.pdf">[pdf]</a><br><br>
-
-
-        </em></li><li><em> S. Tabik, E.M. Garzon, I. Garcia, J.J. Fernandez.<br>
-        <font color="blue"> High Performance Noise Reduction for Biomedical Multidimensional Data</font>.<br>
-        <em> Digital Signal Processing </em>, Vol. 17, Issue 4, pp. 724-736, 2007. <a href="http://www.ac.uma.es/%7Esiham/AND.pdf">[pdf]</a><br>
-
- </em></li></ul><em>
-
-
-
-<h2>Software</h2>    
-<ul>
-
-<li> <font color="blue"> An efficient Total-viewshed Software for Linux OS <a href="http://www.ac.uma.es/%7Esiham/tvs.tar.gz">[Download] </a></font><br>
-
-</li><li> <font color="blue"> Insolator: High Performance GIS-Software for Solar
-Irradiation Computation <a href="http://www.ac.uma.es/%7Esiham/research/radiation.tar.gz">[Download] </a></font><br>
-Insolator is an open source, high performance software for computing solar energy input that can be collected <br> 
-at any point of a terrain represented by a DEM (Digital Elevation Model). It is stable and can be run on distributed <br> and or shared memory systems. <br>
-<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Licencia
-Creative Commons" style="border-width:0" src="Siham%20Tabik_files/88x31.png"></a><br><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Insolator: High Performance GIS-Software for Solar
-Irradiation Computation</span> <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.ac.uma.es/%7Esiham/" property="cc:attributionName" rel="cc:attributionURL"></a> under
-Licence <br><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons
-Reconocimiento-NoComercial-CompartirIgual 3.0 Unported</a>.<br>. <a xmlns:dct="http://purl.org/dc/terms/" href="http://www.ac.uma.es/%7Esiham/research/radiation.tar.gz" rel="dct:source">www.ac.uma.es</a>.
-<br><br>
-</li><li> <font color="blue"> Web appication based in part on Insolator <a href="http://150.214.109.57/radiacion/">[http] </a></font><br>
-This application is available for the area of Malaga.
-</li></ul>
-
-<h2>Technical Reports</h2>
-<li>  S. Tabik, L.F. Romero.
-<br><font color="blue"><a href="http://www.ac.uma.es/%7Esiham/epsilon.pdf">The horizontal error in horizon computation. </a></font><a href="http://www.ac.uma.es/%7Esiham/epsilon.pdf"> </a><br>
-
-
-<p> </p><hr> <img src="Siham%20Tabik_files/dac-pica-small.gif" align="left" border="0" height="61" hspace="10" width="62"> <font size="2"><i> <a href="http://www.ac.uma.es/">Dept. Arquitectura de Computadores</a>,
-<a href="http://www.uma.es/">UMA</a><br>
-<br clear="all"> <hr>
-
 
 
 
