added  index.html

--- a/index.html
+++ b/index.html
@@ -17,14 +17,6 @@ Email: siham AT ugr.es<br>
 </font>
 <br>
 
-<h2>Research Interests</h2>
-<ul>
-    <li>Developing novel and scalable algorithms for Geographic Information Systems
-    </li><li>Optimizing scientific applications for hybrid and heterogeneous systems including Supercomputers
-    </li><li>Accelerating scientific kernels on GPUs, many-core and multi-core  
-</li><li>Building performance models for specific computation patterns
-
-</li></ul>
 
 
 
@@ -32,5 +24,9 @@ Email: siham AT ugr.es<br>
 <ul>
 
 
+Read carefully convolutional.py
 
+Train LeNet-5-like convolutional Network on MNIST dabase
+
+<\ul>
 </i></font></li></em></body></html>
