--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@ Email: siham AT ugr.es<br>
 
 
 
-<h2>TensorFlow tutorial</h2>    
+<h2>TensorFlow Hands-on lab</h2>    
 <ul>
 
+ &bull;        
 
 Read carefully convolutional.py
 
