--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@ Email: siham AT ugr.es<br>
 
 
 
+<h1>TensorFlow Hands-on lab</h1>    
+<h2>Instalation</h2>    
+<h2>My Hello World! example</h2>
 
-<h2>TensorFlow Hands-on lab</h2>    
 <ul>
 
  &bull;        
@@ -30,4 +32,4 @@ Read carefully convolutional.py
 Train LeNet-5-like convolutional Network on MNIST dabase
 
 <\ul>
-</i></font></li></em></body></html>
+</body></html>
