--- a/index.html
+++ b/index.html
@@ -17,19 +17,22 @@ Email: siham AT ugr.es<br>
 </font>
 <br>
 
-
-
 <h1>TensorFlow Hands-on lab</h1>    
-<h2>Instalation</h2>    
-<h2>My Hello World! example</h2>
+<ul>
+  <li>Instalation</li>
+  <li>My Hello World! example</li>
+      &bull; Read carefully convolutional.py
+      &bull; Train LeNet-5-like convolutional Network on MNIST dabase
+
+  <li>Retrain the CNN on my own dataset</li>
+</ul>
+
+
+<h2></h2>    
+<h2></h2>
 
 <ul>
 
- &bull;        
-
-Read carefully convolutional.py
-
-Train LeNet-5-like convolutional Network on MNIST dabase
 
 <\ul>
 </body></html>
