--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@ Email: siham AT ugr.es<br>
 <br>
 
 <h1>TensorFlow Hands-on lab</h1>    
-<ul>
+<ul><ol type="1">
   <li>Instalation</li>
   <li>My Hello World! example</li>
       &bull; Read carefully convolutional.py
       &bull; Train LeNet-5-like convolutional Network on MNIST dabase
 
   <li>Retrain the CNN on my own dataset</li>
+  </ol>      
 </ul>
 
 
