--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@ Email: siham AT ugr.es<br>
 
 <h1>TensorFlow Hands-on lab</h1>    
 <ol>
-  <li>Instalation</li>
-  <li>My Hello World! example</li>
+  <li><h2> Instalation</h2></li>
+  
+  <li><h2>My Hello World! example</h2></li>
       &bull; Read carefully convolutional.py
       &bull; Train LeNet-5-like convolutional Network on MNIST dabase
-
-  <li>Retrain the CNN on my own dataset</li>
+  <li><h2>Classify Immagenet</h2></li>
+cd models/tutorials/image/imagenet<br>
+python classify_image.py<br>
+  <li><h2>Retrain the CNN on my own dataset</h2></li>
 </ol>      
 
 
@@ -30,8 +33,5 @@ Email: siham AT ugr.es<br>
 <h2></h2>    
 <h2></h2>
 
-<ul>
 
-
-<\ul>
 </body></html>
