--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@ Email: siham AT ugr.es<br>
       &bull; Read carefully convolutional.py
       &bull; Train LeNet-5-like convolutional Network on MNIST dabase
   <li><h2>Classify Immagenet</h2></li>
-cd models/tutorials/image/imagenet<br>
-python classify_image.py<br>
+ 
+<xmp> cd models/tutorials/image/imagenet</xmp><br>
+<xmp> python classify_image.py</xmp><br>
+If the model runs correctly, the script will produce the top five classes with their respective scores.
+
+
   <li><h2>Retrain the CNN on my own dataset</h2></li>
 </ol>      
 
