--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@ Email: siham AT ugr.es<br>
  
 <xmp> cd models/tutorials/image/imagenet</xmp><br>
 <xmp> python classify_image.py</xmp><br>
-If the model runs correctly, the script will produce the top five classes with their respective scores.
+If the model runs correctly, the script will produce the top five classes with their respective scores.<br>
+If you wish to supply other JPEG images, you may do so by editing the <xmp> --image_file </xmp> argument.<br>
 
+If you download the model data to a different directory, you will need to point <xmp>--model_dir</xmp> to the directory used.<br>
 
   <li><h2>Retrain the CNN on my own dataset</h2></li>
 </ol>      
