--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ Email: siham AT ugr.es<br>
       &bull; Train LeNet-5-like convolutional Network on MNIST dabase
   <li><h2>Classify Immagenet</h2></li>
  
-<xmp> cd models/tutorials/image/imagenet</xmp><br>
-<xmp> python classify_image.py</xmp><br>
+<xmp> cd models/tutorials/image/imagenet</xmp>
+<xmp> python classify_image.py</xmp>
 If the model runs correctly, the script will produce the top five classes with their respective scores.<br>
 If you wish to supply other JPEG images, you may do so by editing the <xmp> --image_file </xmp> argument.<br>
 
