--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@ If you wish to supply other JPEG images, you may do so by editing the <xmp> --im
 If you download the model data to a different directory, you will need to point <xmp>--model_dir</xmp> to the directory used.<br>
 
   <li><h2>Retrain GoogLeNet Final Layer for New Categories</h2></li>
- Download new dataset
-       &bull; cd ~
-       &bull; curl -O http://download.tensorflow.org/example_images/flower_photos.tgz
-       &bull; tar xzf flower_photos.tgz
- Download retrain.py        
-       &bull; cd  ~/tensorflow/lib/python2.7/site-packages/tensorflow/examples/
-       &bull; mkdir image_retraining
-       &bull; curl -O https://raw.githubusercontent.com/tensorflow/tensorflow/r1.1/tensorflow/examples/image_retraining/retrain.py
-       &bull; python retrain.py {add your args here}
+ Download new dataset <br>
+       &bull; cd ~ </xmp>
+       &bull; curl -O http://download.tensorflow.org/example_images/flower_photos.tgz </xmp>
+       &bull; tar xzf flower_photos.tgz </xmp>
+ Download retrain.py      
+       &bull; cd  ~/tensorflow/lib/python2.7/site-packages/tensorflow/examples/ </xmp>
+       &bull; mkdir image_retraining </xmp>
+       &bull; curl -O https://raw.githubusercontent.com/tensorflow/tensorflow/r1.1/tensorflow/examples/image_retraining/retrain.py 
+       &bull; python retrain.py --image_dir ~/flower_photos {add your args here}<br>
 
 </ol>      
 
