--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@ If you download the model data to a different directory, you will need to point 
 
   <li><h2>Retrain GoogLeNet Final Layer for New Categories</h2></li>
  Download new dataset <br>
-       &bull; <xmp>cd ~ </xmp>
-       &bull; <xmp>curl -O http://download.tensorflow.org/example_images/flower_photos.tgz </xmp>
-       &bull; <xmp>tar xzf flower_photos.tgz </xmp>
- Download retrain.py      
-       &bull; <xmp>cd  ~/tensorflow/lib/python2.7/site-packages/tensorflow/examples/ </xmp>
-       &bull; <xmp>mkdir image_retraining </xmp>
-       &bull; <xmp>curl -O https://raw.githubusercontent.com/tensorflow/tensorflow/r1.1/tensorflow/examples/image_retraining/retrain.py 
-       &bull; <xmp>python retrain.py --image_dir ~/flower_photos {add your args here} </xmp>
+       <xmp> cd ~ </xmp>
+       <xmp> curl -O http://download.tensorflow.org/example_images/flower_photos.tgz </xmp>
+       <xmp> tar xzf flower_photos.tgz </xmp>
+ Download retrain.py   <br>   
+       <xmp> cd  ~/tensorflow/lib/python2.7/site-packages/tensorflow/examples/ </xmp>
+       <xmp> mkdir image_retraining </xmp>
+       <xmp> curl -O https://raw.githubusercontent.com/tensorflow/tensorflow/r1.1/tensorflow/examples/image_retraining/retrain.py 
+       <xmp> python retrain.py --image_dir ~/flower_photos {add your args here} </xmp>
 
 </ol>      
 
