--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Email: siham AT ugr.es<br>
   <li><h2>My Hello World! example</h2></li>
       &bull; Read carefully convolutional.py
       &bull; Train LeNet-5-like convolutional Network on MNIST dabase
-  <li><h2>Classify Immagenet</h2></li>
+  <li><h2>Classify Imagenet</h2></li>
  
 <xmp> cd models/tutorials/image/imagenet</xmp>
 <xmp> python classify_image.py</xmp>
@@ -31,7 +31,7 @@ If you wish to supply other JPEG images, you may do so by editing the <xmp> --im
 
 If you download the model data to a different directory, you will need to point <xmp>--model_dir</xmp> to the directory used.<br>
 
-  <li><h2>Retrain GoogLeNet Final Layer on a New dataset</h2></li>
+  <li><h2>Finetuning GoogLeNet Final Layer on a New dataset</h2></li>
  Download new dataset <br>
        <xmp> cd ~ </xmp>
        <xmp> curl -O http://download.tensorflow.org/example_images/flower_photos.tgz </xmp>
