--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Email: siham AT ugr.es<br>
 
 <br>
 
-<h1>TensorFlow Hands-on lab</h1>    
+<h1> Hands-on lab: Build CNN-classifiers with TensorFlow </h1>    
 <ol>
   <li><h2> Instalation</h2></li>
   
