--- a/index.html
+++ b/index.html
@@ -33,9 +33,16 @@ If you download the model data to a different directory, you will need to point 
 
   <li><h2>Finetuning GoogLeNet Final Layer on a New dataset</h2></li>
  Download new dataset <br>
+       <table>
+	<tr  bgcolor="#777777">
+		<td>
+			<font face="Monotype Corsiva, Verdana" size="4" color="#00FF00">
        <xmp> cd ~ </xmp>
        <xmp> curl -O http://download.tensorflow.org/example_images/flower_photos.tgz </xmp>
-       <xmp> tar xzf flower_photos.tgz </xmp>
+       <xmp> tar xzf flower_photos.tgz </xmp> </font>
+		</td>
+	</tr>
+</table>
  Download retrain.py   <br>   
        <xmp> cd  ~/tensorflow/lib/python2.7/site-packages/tensorflow/examples/ </xmp>
        <xmp> mkdir image_retraining </xmp>
