--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ If you download the model data to a different directory, you will need to point 
   <li><h2>Finetuning GoogLeNet Final Layer on a New dataset</h2></li>
  Download new dataset <br>
        <table>
-	<tr  bgcolor="#777777">
+	<tr  bgcolor="#777777"><td>
 	<xmp> cd ~ </xmp>
        <xmp> curl -O http://download.tensorflow.org/example_images/flower_photos.tgz </xmp>
-       <xmp> tar xzf flower_photos.tgz </xmp> </font>
+       <xmp> tar xzf flower_photos.tgz </xmp> </font></td>
 	</tr>
 </table>
  Download retrain.py   <br>   
