--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ If you download the model data to a different directory, you will need to point 
   <li><h2>Finetuning GoogLeNet Final Layer on a New dataset</h2></li>
  Download new dataset <br>
  <table>
-   <tr  bgcolor="#FFFFCC"><td>
+   <tr  bgcolor="#CCFFFF"><td>
        <xmp> cd ~ </xmp>
        <xmp> curl -O http://download.tensorflow.org/example_images/flower_photos.tgz </xmp>
        <xmp> tar xzf flower_photos.tgz </xmp> </font>
@@ -44,7 +44,7 @@ If you download the model data to a different directory, you will need to point 
 </table>
  Download retrain.py   <br>   
 <table>
-   <tr  bgcolor="#FFFFCC"><td>	
+   <tr  bgcolor="#CCFFFF"><td>	
        <xmp> cd  ~/tensorflow/lib/python2.7/site-packages/tensorflow/examples/ </xmp>
        <xmp> mkdir image_retraining </xmp>
        <xmp> curl -O https://raw.githubusercontent.com/tensorflow/tensorflow/r1.1/tensorflow/examples/image_retraining/retrain.py </xmp>
@@ -53,7 +53,11 @@ If you download the model data to a different directory, you will need to point 
 </table>
 
 	   Have a look at retrain.py and costumize where you want to download the GoogLeNet, also called Inception model, bottelneck, . By default the model is downloaded in /tmp. 
-        <xmp> python retrain.py --image_dir ~/flower_photos {add your args here} </xmp>
+        <tr  bgcolor="#CCFFFF"><td>	
+	<xmp> python retrain.py --image_dir ~/flower_photos {add your args here} </xmp>
+	</td>
+   </tr>
+</table>	
 This script loads the pre-trained GoogLeNet model, removes the old top FC layer, and trains a new one on the flower photos
  you've downloaded. None of the flower species were in the original ImageNet classes the full network was trained on. 
  The magic of transfer learning is that lower layers that have been trained to distinguish between some objects can be reused for many recognition tasks without any alteration.
