--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ Email: siham AT ugr.es<br>
 <h1> Hands-on lab: Build CNN-classifiers with TensorFlow </h1>    
 <ol>
   <li><h2> Instalation</h2></li>
-  TensorFlow can be installed in Ubuntu, Mac and Windows (not sure about its stability).
-  &bull; Before installation one should have the answers to these questions: 
-	 If you have 1) NVIDIA® GPU with Compute Capability 3.0 or higher and 2) cuDNN v5.1 v3 or greater then you can install  tensorflow-gpu, which is basically a version of tensorflow prepared to run on NVIDIA GPUs.
+  TensorFlow can be installed in Ubuntu, Mac and Windows (not sure about its stability).<br>
+  &bull; Before installation one should have the answers to these questions: <br>
+	 If you have 1) NVIDIA® GPU with Compute Capability 3.0 or higher and 2) cuDNN v5.1 v3 or greater then you can install  tensorflow-gpu, which is basically a version of tensorflow prepared to run on NVIDIA GPUs.<br>
 	
-	your system has a  meeting the prerequisites 
+&bull;	Prerequisites 
   <li><h2>My Hello World! example</h2></li>
       &bull; Read carefully convolutional.py
       &bull; Train LeNet-5-like convolutional Network on MNIST dabase
