--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@ Email: siham AT ugr.es<br>
 
 <h1> Hands-on lab: Build CNN-classifiers with TensorFlow </h1>    
 <ol>
-  <li><h2> Instalation</h2></li>
+  <li><h2> Install TensorFlow with virtualenv </h2></li>
   TensorFlow can be installed in Ubuntu, Mac and Windows (not sure about its stability).<br>
-  &bull; Before installation one should have the answers to these questions: <br>
-	 If you have 1) NVIDIA® GPU with Compute Capability 3.0 or higher and 2) cuDNN v5.1 v3 or greater then you can install  tensorflow-gpu, which is basically a version of tensorflow prepared to run on NVIDIA GPUs.<br>
+  &bull;  If you have 1) NVIDIA® GPU with Compute Capability 3.0 or higher and 2) cuDNN v5.1 v3 or greater then you can install  tensorflow-gpu, prepared to run on NVIDIA GPUs.<br>
 	
-&bull;	Prerequisites 
+  &bull; TensorFlow can be installed using four different mecanisms. In this lab we will use the most recomenaded one, which is the virtualenv mecanism. <br>
+	
+	
+	
   <li><h2>My Hello World! example</h2></li>
       &bull; Read carefully convolutional.py
       &bull; Train LeNet-5-like convolutional Network on MNIST dabase
