--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@ Email: siham AT ugr.es<br>
 
 <xmp> virtualenv --system-site-packages targetDirectory </xmp>
 The targetDirectory specifies the top of the virtualenv tree. Our instructions assume that targetDirectory is ~/tensorflow, but you may choose any directory.
-  <li>
+  <li> Activate the virtualenv environment by issuing one of the following commands:
+
+ <xmp>  source ~/tensorflow/bin/activate # bash, sh, ksh, or zsh</xmp>
+ <xmp>  source ~/tensorflow/bin/activate.csh  # csh or tcsh</xmp>
+The preceding source command should change your prompt to the following:<br>
+
+ <xmp>(tensorflow)$ </xmp>
+<li>	  Issue one of the following commands to install TensorFlow in the active virtualenv environment:<br>
+
+ <xmp>(tensorflow)$ pip install --upgrade tensorflow      # for Python 2.7</xmp>
+<xmp> (tensorflow)$ pip3 install --upgrade tensorflow     # for Python 3.n</xmp>
+ <xmp>(tensorflow)$ pip install --upgrade tensorflow-gpu  # for Python 2.7 and GPU</xmp>
+ <xmp>(tensorflow)$ pip3 install --upgrade tensorflow-gpu # for Python 3.n and GPU</xmp>
 </ol> 
 	
   <li><h2>My Hello World! example</h2></li>
