--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Email: siham AT ugr.es<br>
 <ol>
   <li><h2> Install TensorFlow with virtual Python environment </h2></li>
   TensorFlow can be installed in Ubuntu, Mac and Windows (not sure about its stability).<br>
-  &bull;  If you have 1) NVIDIA® GPU with Compute Capability 3.0 or higher and 2) cuDNN v5.1 v3 or greater then you can install  tensorflow-gpu, prepared to run on NVIDIA GPUs.<br>
+  
 	
   &bull; TensorFlow can be installed using four different mecanisms. We will the one recomenaded by the TF team, which is the virtualenv mecanism. <br>
 	
@@ -39,12 +39,14 @@ The preceding source command should change your prompt to the following:<br>
 
  <xmp>(tensorflow)$ </xmp>
 <li>	  Issue one of the following commands to install TensorFlow in the active virtualenv environment:<br>
-
- <xmp>(tensorflow)$ pip install --upgrade tensorflow      # for Python 2.7</xmp>
-<xmp> (tensorflow)$ pip3 install --upgrade tensorflow     # for Python 3.n</xmp>
+<br>If you have 1) NVIDIA® GPU with Compute Capability 3.0 or higher and 2) cuDNN v5.1 v3 or greater then you can install  tensorflow-gpu, prepared to run on NVIDIA GPUs.<br>	
  <xmp>(tensorflow)$ pip install --upgrade tensorflow-gpu  # for Python 2.7 and GPU</xmp>
  <xmp>(tensorflow)$ pip3 install --upgrade tensorflow-gpu # for Python 3.n and GPU</xmp>
-</ol> 
+If you don't have GPUs with the mentioned characteristics then:<br>
+	
+ <xmp>(tensorflow)$ pip install --upgrade tensorflow      # for Python 2.7</xmp>
+<xmp> (tensorflow)$ pip3 install --upgrade tensorflow     # for Python 3.n</xmp>
+ </ol> 
 	
   <li><h2>My Hello World! example</h2></li>
       &bull; Read carefully convolutional.py
