--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Email: siham AT ugr.es<br>
 
 <br>
 
-<h1> Hands-on lab: Build CNN-classifiers with TensorFlow </h1>    
+<h1> Hands-on lab: CNNs with TensorFlow </h1>    
 <ol>
   <li><h2> Install TensorFlow with virtual Python environment </h2></li>
   TensorFlow can be installed in Ubuntu, Mac and Windows (not sure about its stability).<br>
