--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Email: siham AT ugr.es<br>
 <h1> Hands-on lab: CNNs with TensorFlow </h1>    
 <ol>
   <li><h2> Install TensorFlow with virtual Python environment </h2></li>
-  TensorFlow can be installed in Ubuntu, Mac and Windows (not sure about its stability).<br>
+  TensorFlow can be installed in Ubuntu, Mac and Windows (not sure about its stability under Windows OS).<br>
   
 	
   &bull; TensorFlow can be installed using four different mecanisms. We will the one recomenaded by the TF team, which is the virtualenv mecanism. <br>
