--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Email: siham AT ugr.es<br>
   TensorFlow can be installed in Ubuntu, Mac and Windows (not sure about its stability under Windows OS).<br><br>
   
 	
-  TensorFlow can be installed using four different mecanisms. We will use the one recomenaded virtualenv instalation. The steps are as follows: <br>
+  TensorFlow can be installed using four different mecanisms. We will use the recomenaded virtualenv instalation. The steps are as follows: <br><br>
 	
 <ol>
   <li>Install pip and virtualenv by issuing the following command:<br>
