--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@ Email: siham AT ugr.es<br>
 	
 <ol>
   <li>Install pip and virtualenv by issuing the following command:<br>
-
+<table>
+   <tr  bgcolor="#CCFFFF"><td>	
 <xmp>  sudo apt-get install python-pip python-dev python-virtualenv</xmp>
+	    </td>
+   </tr>
+</table>
   <li> Create a virtualenv environment by issuing the following command:<br>
 
 <xmp> virtualenv --system-site-packages targetDirectory </xmp>
