--- a/index.html
+++ b/index.html
@@ -32,21 +32,38 @@ Email: siham AT ugr.es<br>
    </tr>
 </table>
   <li> Create a virtualenv environment by issuing the following command:<br>
-
+<table>
+   <tr  bgcolor="#CCFFFF"><td>	
 <xmp> virtualenv --system-site-packages targetDirectory </xmp>
+	   	    </td>
+   </tr>
+</table>
 The targetDirectory specifies the top of the virtualenv tree. Our instructions assume that targetDirectory is ~/tensorflow, but you may choose any directory.
   <li> Activate the virtualenv environment by issuing one of the following commands:
-
+<table>
+   <tr  bgcolor="#CCFFFF"><td>	
  <xmp>  source ~/tensorflow/bin/activate # bash, sh, ksh, or zsh</xmp>
  <xmp>  source ~/tensorflow/bin/activate.csh  # csh or tcsh</xmp>
+	  	   	    </td>
+   </tr>
+</table> 
 The preceding source command should change your prompt to the following:<br>
-
+<table>
+   <tr  bgcolor="#CCFFFF"><td>	
  <xmp>(tensorflow)$ </xmp>
+	   	  	   	    </td>
+   </tr>
+</table> 
 <li>	  Issue one of the following commands to install TensorFlow in the active virtualenv environment:<br>
 <br>If you have 1) NVIDIA® GPU with Compute Capability 3.0 or higher and 2) cuDNN v5.1 v3 or greater then you can install  tensorflow-gpu, prepared to run on NVIDIA GPUs.<br>	
- <xmp>(tensorflow)$ pip install --upgrade tensorflow-gpu  # for Python 2.7 and GPU</xmp>
+ 
+<xmp>(tensorflow)$ pip install --upgrade tensorflow-gpu  # for Python 2.7 and GPU</xmp>
  <xmp>(tensorflow)$ pip3 install --upgrade tensorflow-gpu # for Python 3.n and GPU</xmp>
-If you don't have GPUs with the mentioned characteristics then:<br>
+	   	    </td>
+   </tr>
+</table>
+	
+	If you don't have GPUs with the mentioned characteristics then:<br>
 	
  <xmp>(tensorflow)$ pip install --upgrade tensorflow      # for Python 2.7</xmp>
 <xmp> (tensorflow)$ pip3 install --upgrade tensorflow     # for Python 3.n</xmp>
