--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ Email: siham AT ugr.es<br>
   TensorFlow can be installed using four different mecanisms. We will use the recomenaded virtualenv instalation. The steps are as follows: <br><br>
 	
 <ol>
-  <li>Install pip and virtualenv by issuing the following command:<br>
+  <li> Install pip and virtualenv by issuing the following command:<br>
 <table>
    <tr  bgcolor="#CCFFFF"><td>	
-<xmp>  sudo apt-get install python-pip python-dev python-virtualenv</xmp>
+<xmp> sudo apt-get install python-pip python-dev python-virtualenv</xmp>
 	    </td>
    </tr>
 </table>
@@ -35,44 +35,46 @@ Email: siham AT ugr.es<br>
 <table>
    <tr  bgcolor="#CCFFFF"><td>	
 <xmp> virtualenv --system-site-packages targetDirectory </xmp>
-	   	    </td>
-   </tr>
-</table>
+</td></tr></table>
+
 The targetDirectory specifies the top of the virtualenv tree. Our instructions assume that targetDirectory is ~/tensorflow, but you may choose any directory.
-  <li> Activate the virtualenv environment by issuing one of the following commands:
-<table>
-   <tr  bgcolor="#CCFFFF"><td>	
- <xmp>  source ~/tensorflow/bin/activate # bash, sh, ksh, or zsh</xmp>
- <xmp>  source ~/tensorflow/bin/activate.csh  # csh or tcsh</xmp>
-	</td>
-   </tr>
-</table> 
+<li> Activate the virtualenv environment by issuing one of the following commands:
+<table><tr  bgcolor="#CCFFFF"><td>	
+ <xmp> source ~/tensorflow/bin/activate # bash, sh, ksh, or zsh</xmp>
+ <xmp> source ~/tensorflow/bin/activate.csh  # csh or tcsh</xmp>
+</td> </tr></table> 
 The preceding source command should change your prompt to the following:<br>
 <table><tr  bgcolor="#CCFFFF"><td>	
- <xmp>(tensorflow)$ </xmp>
-	</td> </tr></table>
+<xmp> (tensorflow)$ </xmp>
+</td> </tr></table>
 	  
-<li>	  Issue one of the following commands to install TensorFlow in the active virtualenv environment:<br>
-<br>If you have 1) NVIDIA® GPU with Compute Capability 3.0 or higher and 2) cuDNN v5.1 v3 or greater then you can install  tensorflow-gpu, prepared to run on NVIDIA GPUs.<br>	
+<li> Issue one of the following commands to install TensorFlow in the active virtualenv environment:<br>
+<br> If you have 1) NVIDIA® GPU with Compute Capability 3.0 or higher and 2) cuDNN v5.1 v3 or greater then you can install  tensorflow-gpu, which os prepared to run on one and multiple NVIDIA GPUs.<br>	
 
 <table><tr  bgcolor="#CCFFFF"><td>	
-<xmp>(tensorflow)$ pip install --upgrade tensorflow-gpu  # for Python 2.7 and GPU</xmp>
-<xmp>(tensorflow)$ pip3 install --upgrade tensorflow-gpu # for Python 3.n and GPU</xmp>
+<xmp> (tensorflow)$ pip install --upgrade tensorflow-gpu  # for Python 2.7 and GPU</xmp>
+<xmp> (tensorflow)$ pip3 install --upgrade tensorflow-gpu # for Python 3.n and GPU</xmp>
 </td></tr></table>
 	
-	If you don't have GPUs with the mentioned characteristics then:<br>
+If you don't have GPUs with the mentioned characteristics then:<br>
 <table><tr  bgcolor="#CCFFFF"><td>		
- <xmp>(tensorflow)$ pip install --upgrade tensorflow      # for Python 2.7</xmp>
+<xmp> (tensorflow)$ pip install --upgrade tensorflow      # for Python 2.7</xmp>
 <xmp> (tensorflow)$ pip3 install --upgrade tensorflow     # for Python 3.n</xmp>
 
 </td> </tr></table>
-
-	</ol> 
+</ol> 
 	
-  <li><h2>My Hello World! example</h2></li>
-      &bull; Read carefully convolutional.py
-      &bull; Train LeNet-5-like convolutional Network on MNIST dabase
-  <li><h2>Classify Imagenet</h2></li>
+<li><h2>My Hello World! example</h2></li>
+MNIST is the Hello World! of Deep Learning CNNs. <br>      
+&bull; Let's train LeNet-5-like convolutional Network on MNIST dabase. <br>
+&bull; First go to the mnist floder.<br>	
+<table><tr  bgcolor="#CCFFFF"><td>	
+<xmp> 	tensorflow/lib/python2.7/site-packages/tensorflow/models/image/mnist/</xmp>
+</td> </tr></table>
+	
+&bull;	Read carefully convolutional.py
+      
+<li><h2>Classify Imagenet</h2></li>
  
 <xmp> cd models/tutorials/image/imagenet</xmp>
 <xmp> python classify_image.py</xmp>
