--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ School of Informatics<br>
 University of Granada<br>
 Email: siham AT ugr.es<br>
 
-
+<div style="display: none;" id="hiddenText">This is hidden</div>
+<a href="#" onclick="document.getElementById('hiddenText').style.display="block"; return false;">Click here to show hidden text</a>
+	
 <br>
 
 <h2> Hands-on lab: Building CNNs based-classifiers with TensorFlow </h2>    
@@ -82,9 +84,7 @@ Enter the following short program inside the python interactive shell: <br>
 	
 If the system outputs the following, then you are ready to begin writing TensorFlow programs:<br>
 <table><tr  bgcolor="#CCFFFF"><td>		
-<xmp>
-	Hello, TensorFlow!
-</xmp>
+<xmp>Hello, TensorFlow!</xmp>
 </td> </tr></table>
 
 
